spring-boot-example/istio-rules/10-helloworld-service-503-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-service
spec:
  hosts:
  - helloworld-service
  http:
  - route:
    - destination:
        host: helloworld-service
    fault:
      abort:
        percent: 100
        httpStatus: 503
