spring-boot-example/istio-rules/9-guestbook-service-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-service
spec:
  hosts:
  - helloworld-service
  http:
  - route:
    - destination:
        host: helloworld-service
    fault:
      delay:
        percent: 60
        fixedDelay: 5s
    retries:
      attempts: 5
      perTryTimeout: 1s
